--- a/Kyramkonda assignment 1 Submission.ipynb
+++ b/Kyramkonda assignment 1 Submission.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f071b998",
+   "id": "674017e3",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1d1ebfd1",
+   "id": "a1bc267a",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "262831bd",
+   "id": "8ce275c1",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "25cca482",
+   "id": "0c399b7f",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "49997550",
+   "id": "08a19d67",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "57e3ec0d",
+   "id": "fce59d40",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "df32e1ae",
+   "id": "e19413c8",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8a04f16f",
+   "id": "4996a2c1",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b6dd8853",
+   "id": "39a8897b",
    "metadata": {},
    "outputs": [
     {
@@ -204,40 +204,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "417dfd9c",
+   "execution_count": 21,
+   "id": "31940ecf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Java', 'HTML', 'DBMS', 'C++'] <class 'list'>\n"
+      "['Java', 'HTML', 'DBMS'] <class 'list'>\n"
      ]
     }
    ],
    "source": [
     "#get the value of skills and check the data type,it should be a list\n",
+    "student={'first_name':'Apoorva', 'last_name' : 'Kyramkonda','gender':'F','age': '21','marital status':'unmarried','skills':['Java','HTML','DBMS'],'country':'USA','city':'Centerton','address':'PiperLn'}\n",
     "s=list(student)\n",
     "print(student.get('skills'),type(s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "0aa20ae8",
+   "execution_count": 17,
+   "id": "2190003d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'first_name': 'Apoorva', 'last_name': 'Kyramkonda', 'gender': 'F', 'age': '21', 'marital status': 'unmarried', 'skills': ['Java', 'HTML', 'DBMS', 'C++', 'C++'], 'country': 'USA', 'city': 'Centerton', 'address': 'PiperLn'}\n"
+      "{'first_name': 'Apoorva', 'last_name': 'Kyramkonda', 'gender': 'F', 'age': '21', 'marital status': 'unmarried', 'skills': ['Java', 'HTML', 'DBMS', 'C++'], 'country': 'USA', 'city': 'Centerton', 'address': 'PiperLn'}\n"
      ]
     }
    ],
    "source": [
     "#modify the skills values by adding 1 or 2 strings\n",
+    "student={'first_name':'Apoorva','last_name':'Kyramkonda','gender':'F','age':'21','marital status':'unmarried','skills':['Java','HTML','DBMS'],'country':'USA','city':'Centerton','address':'PiperLn'}\n",
     "student['skills'].append('C++')\n",
     "print(student)"
    ]
@@ -245,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "200f68a1",
+   "id": "bc706c03",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "5bc8a889",
+   "id": "a776abda",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3e2f2716",
+   "id": "782d8c94",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "565377ae",
+   "id": "7099b7c6",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "bc3cd355",
+   "id": "17f6baae",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "2e32c2a8",
+   "id": "1e2e09e5",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "cffefd83",
+   "id": "7f1c6def",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "41fa347a",
+   "id": "2a4f0e04",
    "metadata": {},
    "outputs": [
     {
@@ -421,28 +423,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "2f65ea4d",
+   "execution_count": 11,
+   "id": "4d565aac",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Microsoft', 'Instagram', 'IBM', 'Facebook', 'Google', 'Oracle', 'Twitter', 'Amazon', 'Apple', 'Snapchat'}\n"
+      "{'Amazon', 'Twitter', 'Facebook', 'Snapchat', 'oracle', 'Apple', 'IBM', 'Microsoft', 'Google', 'Instagram'}\n"
      ]
     }
    ],
    "source": [
     "#insert multiple IT companies at once to the set it_companies\n",
-    "it_companies.update(['Twitter','Instagram','Snapchat'])\n",
+    "it_companies={'IBM','Google','oracle','Amazon','Apple','Twitter','Facebook','Microsoft'}\n",
+    "it_companies.update(['Instagram','Snapchat'])\n",
     "print(it_companies)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "23b31900",
+   "id": "aeca9573",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "18342609",
+   "id": "3847d9e2",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "585811f0",
+   "id": "8b72b5cb",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "02a797a7",
+   "id": "2b5a9654",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c9ff30b6",
+   "id": "891986c7",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3c9dfd2b",
+   "id": "0f46febe",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "7141eaa5",
+   "id": "543ae3be",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "72c01163",
+   "id": "7f9d2342",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1f06431a",
+   "id": "d50e822a",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "71a461aa",
+   "id": "42688a81",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "a2f7b601",
+   "id": "af8284e2",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "402fed27",
+   "id": "c2072b54",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "1094e605",
+   "id": "78ee9919",
    "metadata": {},
    "outputs": [
     {
@@ -711,15 +714,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "d5ff8750",
+   "execution_count": 7,
+   "id": "d70f8709",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "10\n",
+      "{'am', 'love', 'teach', 'to', 'a', 'I', 'inspire', 'people', 'and', 'teacher'}\n"
      ]
     }
    ],
@@ -729,13 +733,14 @@
     "# How many unique words have been used in the sentence? Use the split methods and set to get the unique words\n",
     "str=\"I am a teacher and I love to inspire and teach people\"\n",
     "words = set(str.split(\" \"))\n",
-    "print(len(words))"
+    "print(len(words))\n",
+    "print(words)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c1b2c1b9",
+   "id": "3c67c47b",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "02828135",
+   "id": "24df3971",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02b8b928",
+   "id": "2628a145",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68787f70",
+   "id": "15ff7a0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -830,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121c6e68",
+   "id": "e39088d9",
    "metadata": {},
    "outputs": [],
    "source": []
